Fix : Header Overlapping

--- a/House-of-glass/src/components/Header/Header.module.css
+++ b/House-of-glass/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
   grid-area: navbar;
   width: 100vw;
   max-width: 100vw;
-  height: 6rem;
+  height: 5rem;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -11,6 +11,10 @@
   position: sticky;
   top: 0;
   z-index: 5;
+}
+/* TODO: ADD SEARCH FUNCTIONALITY */
+.glass_search {
+  display: none !important;
 }
 
 .glass_logo {
@@ -73,21 +77,12 @@
   height: 20px;
   font-size: 1rem !important;
 }
-@media only screen and (max-width: 1401px) {
-  .glass_navbar {
-    height: 10rem;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-  }
-}
 
 @media only screen and (max-width: 768px) {
   .glass_navbar {
     grid-area: navbar;
-    height: 15rem;
-    display: flex;
-    flex-direction: row;
+    height: 5rem;
+    flex-wrap: nowrap;
     align-items: flex-start;
   }
 
